<?xml version="1.0" encoding="utf-8"?>
<!-- S3242: destructive variant of dialog_action_pair - confirm slot swapped for the red DialogDestructive style. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_action_button_gap"
        android:text="@string/cancel"
        android:focusedByDefault="true"
        style="@style/Widget.FastMediaSorter.Button.DialogCancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        style="@style/Widget.FastMediaSorter.Button.DialogDestructive" />

</LinearLayout>
